# adventofcode

./: .gitignore  breadth_first.py  chooser.py  collection_utils.py  coord_utils.py  dag.py  keyeddefaultdict.py  math_utils.py  parsing.py  pyproject.toml  requirements.txt  template.py  unionfind.py  utils.py
2018/1/: day1.py
2018/10/: day10.py
2018/11/: day11.py
2018/12/: day12.py
2018/13/: day13.py
2018/14/: day14.py
2018/15/: day15.py
2018/16/: day16.py
2018/17/: day17.py
2018/18/: day18.py
2018/19/: day19.py  day19input.txt
2018/2/: day2.py
2018/20/: day20.py  day20test5.txt
2018/21/: day21.py  day21input.txt  day21trans.py
2018/22/: day22.py
2018/23/: day23.py  day23soft.py
2018/24/: day24.py  day24input.txt
2018/25/: day25.py
2018/3/: day3.py
2018/4/: day4.py
2018/5/: day5.py
2018/6/: day6.py
2018/7/: day7.py
2018/8/: day8.py
2018/9/: day9.py
2019/1/: day1.py
2019/2/: day2.py
2019/3/: day3.py
2019/5/: day5.py
y2019/: intcode.py
y2019/d04/: day4.py
y2019/d05/: day5.py
y2019/d06/: day6.py
y2019/d07/: day7.py
y2019/d08/: day8.py
y2019/d09/: day9.py
y2019/d10/: day10.py
y2019/d11/: day11.py
y2019/d12/: day12.py
y2019/d13/: day13.py
y2019/d14/: day14.py
y2019/d15/: day15.py
y2019/d16/: day16.py
y2019/d17/: day17.py
y2019/d18/: day18.py
y2019/d19/: day19.py
y2019/d20/: day20.py
y2019/d21/: day21.py
y2019/d22/: day22.py
y2019/d23/: day23.py
y2019/d24/: day24.py
y2019/d25/: day25.py
y2020/: computer.py
y2020/d01/: day1.py
y2020/d02/: day2.py
y2020/d03/: day3.py
(+148 files in other folders)
