[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11",
    "parsy~=2.1",
    "parsy-stubs>=2.1.2",
    "portion~=2.4.1",
    "z3-solver>=4.15.4.0",
]

[tool.mypy]
follow_untyped_imports = true
